# pagesnap

./: .gitignore  LICENSE  README.md  README_zh.md  changelog.md  pyproject.toml
pagesnap/: pagesnap.py
